objects/Training2__c.object
<CustomObject>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field1__c</fullName>
        <description>field1 created</description>
        <label>field1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <description>field 2 created</description>
        <label>field2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>